<resources>
    <string name="app_name">The Light of Education</string>
    <string name="display_name">Display name</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="eight_symbols">Password must contain at least 8 symbols</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="middle">Middle</string>
    <string name="undergraduate">Undergraduate</string>
    <string name="magistracy">Magistracy</string>
    <string name="graduate_school">Graduate school</string>
    <string name="full_time">Full-time</string>
    <string name="part_time">Part-time</string>
    <string name="evening">Evening</string>
    <string name="remote">Remote</string>
    <string name="accelerated">Accelerated</string>
    <string name="directions">Directions</string>
    <string name="tap_to_search">Tap to search</string>
    <string name="topics">Topics</string>
    <string name="filter_results">Filter results</string>
    <string name="subject">Subject</string>
    <string name="choose_level">Choose level</string>
    <string name="tuition_fee">Tuition fee</string>
    <string name="choose_format">Choose format</string>
    <string name="passing_score">Passing score</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="off_filters">Off filters</string>
    <string name="new_topic">New Topic</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="topic">Topic</string>
    <string name="message">Message</string>
    <string name="enter_message">Enter message</string>
    <string name="code">Code</string>
    <string name="level">Level</string>
    <string name="format">Format</string>
    <string name="score_passing">Score passing</string>
    <string name="address">Address</string>
    <string name="url" translatable="false">URL</string>
    <string name="create_topic">Create topic</string>
    <string name="empty_name">Empty name</string>
    <string name="empty_email">Empty e-mail</string>
    <string name="empty_text_field">Empty text field</string>
</resources>