<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.search.FiltersBottomSheet">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/filter_results"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintEnd_toStartOf="@+id/button_off_filters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_off_filters"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/off_filters"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:icon="@drawable/ic_round_filter_list_off"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu_subject"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/subject"
        app:layout_constraintEnd_toEndOf="@+id/button_off_filters"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_choose_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_level"
        android:textAppearance="?textAppearanceSubtitle1"
        app:layout_constraintEnd_toEndOf="@+id/menu_subject"
        app:layout_constraintStart_toStartOf="@+id/menu_subject"
        app:layout_constraintTop_toBottomOf="@+id/menu_subject" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/text_choose_level"
        app:layout_constraintStart_toStartOf="@+id/text_choose_level"
        app:layout_constraintTop_toBottomOf="@+id/text_choose_level"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_level_middle"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_level_undergraduate"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undergraduate" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_level_magistracy"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magistracy" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_level_graduate"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graduate_school" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_money"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tuition_fee"
        app:layout_constraintEnd_toEndOf="@+id/chips_level"
        app:layout_constraintStart_toStartOf="@+id/chips_level"
        app:layout_constraintTop_toBottomOf="@+id/chips_level">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_choose_format"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_format"
        android:textAppearance="?textAppearanceSubtitle1"
        app:layout_constraintEnd_toEndOf="@+id/text_field_money"
        app:layout_constraintStart_toStartOf="@+id/text_field_money"
        app:layout_constraintTop_toBottomOf="@+id/text_field_money" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_format"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/text_choose_format"
        app:layout_constraintStart_toStartOf="@+id/text_choose_format"
        app:layout_constraintTop_toBottomOf="@+id/text_choose_format"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_format_full"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_time" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_format_part"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/part_time" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_format_evening"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evening" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_format_remote"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remote" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_format_accelerated"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accelerated" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_score"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/passing_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chips_format"
        app:layout_constraintStart_toStartOf="@+id/chips_format"
        app:layout_constraintTop_toBottomOf="@+id/chips_format">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>